# DAAQS

./: .cdsapirc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compare_OpenAQ_CAMS.py  create_ll_maps.py  create_lll_maps.py  create_map.py  environment.yml  knn_pyod.py  notes.md  plot_data.py  pull_request_template.md  pyproject.toml  read_cams.py  read_openaq.py  requirements.txt  run.py  run_local.py  run_stats.py  s3.py  scratch.py  scratch_plot.py  setup.py  test_script_1.py  w.py  w_lll.py  w_loc_lat_lon.py  write_ll.py  write_lll.py
DAAQS/: __init__.py
DAAQS/aws_scripts/: m_connect_ec2.sh  m_copy_to_ec2.sh  query_openAQ.py
DAAQS/transfer_scripts/: m_copy_from_esowc24.sh  m_copy_to_eswoc24.sh
DAAQS/utils/: __init__.py  analysis.py  cfg.py  constants.py  gp.py  io.py  io_cams.py  io_openaq.py  maps.py  misc.py  model.py  preprocess.py  stats.py
deliverables/: Documentation.md
outputs/: overall_COPOD_no2_cams.csv  overall_COPOD_no2_openaq.csv  overall_COPOD_o3_cams.csv  overall_COPOD_o3_openaq.csv  overall_COPOD_pm25_cams.csv  overall_COPOD_pm25_openaq.csv  overall_COPOD_so2_cams.csv  overall_COPOD_so2_openaq.csv  overall_KNN_no2_cams.csv  overall_KNN_no2_openaq.csv  overall_KNN_o3_cams.csv  overall_KNN_o3_openaq.csv  overall_KNN_pm25_cams.csv  overall_KNN_pm25_openaq.csv  overall_KNN_so2_cams.csv  overall_KNN_so2_openaq.csv  overall_PCA_no2_cams.csv  overall_PCA_no2_openaq.csv  overall_PCA_o3_cams.csv  overall_PCA_o3_openaq.csv  overall_PCA_pm25_cams.csv  overall_PCA_pm25_openaq.csv  overall_PCA_so2_cams.csv  overall_PCA_so2_openaq.csv
