[tool.poetry]
name = "DAAQS"
version = "0.1.0"
description = "DAAQS: Detect Anomaly in Air Quality Stations"
authors = ["Kumar Shridhar<shridhar.stark@gmail.com>", "Mohit Anand<>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
PyYAML = "^5.3.1"
cdsapi = "^0.2.7"
cdo = "^1.5.3"
tqdm = "^4.46.1"
matplotlib = "^3.2.1"
cartopy = "^0.18.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
coverage = "^5.1"
requirements-parser = "^0.2.0"
pytest-xdist = "^1.32.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
